implemented validation for forms

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -5,12 +5,20 @@
     </app-header>
 </div>
 
-<app-search
-placeholderText = "Search"
-(searchDataEvent) = "log($event)"
->
-</app-search>
+<app-courses></app-courses>
 
 <div class="form-wrapper">
     <app-course-form></app-course-form>
 </div>
+
+<div class="form-wrapper">
+    <app-login></app-login>
+</div>
+
+<div class="form-wrapper">
+    <app-registration></app-registration>
+</div>
+
+<div> creationDate pipe   {{date | creationDate}}</div>
+<div> stringJoiner pipe   {{array | stringJoiner: separator}}</div>
+<div> duration pipe   {{125 | duration}}</div>
