--- a/angular-app/src/app/shared/components/course-form/course-form.component.css
+++ b/angular-app/src/app/shared/components/course-form/course-form.component.css
@@ -20,17 +20,8 @@
     border: 2px solid #f1a05d;
 }
 .form__input--large{
-    line-height: 200px;
+    padding-bottom: 200px;
     border: 2px solid #f9e1a2;
-}
-.form__btn{
-    padding: 5px 20px;
-    border: 2px solid #9a57dd;
-    background-color: #fff;
-}
-.form__btn--centered{
-   display: block;
-   margin: 10px auto;
 }
 .author-form{
     padding: 15px;
@@ -52,4 +43,10 @@
 }
 .form__duration-text{
     margin-top: 10px;
+}
+.form__error-text{
+    color: red;
+}
+.form__input--invalid{
+    border: 2px solid red;
 }
