--- a/angular-app/src/app/shared/components/header/header.component.html
+++ b/angular-app/src/app/shared/components/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="header-wrapper">
-    <a href="/courses">
+    <!-- routerLink="/courses" is not clickable here -->
+    <a href="/courses"> 
         <img class="header__logo" src="./../../../../assets/images/logo.png" alt="">
     </a>
     
